syntax = "proto3";

option java_package = "bob.colbaskin.webantpractice.datastore";
option java_multiple_files = true;

enum AuthStatus {
  NOT_AUTHENTICATED = 0;
  AUTHENTICATED = 1;
}