syntax = "proto3";

option java_package = "bob.colbaskin.webantpractice.datastore";
option java_multiple_files = true;

enum OnboardingStatus {
  NOT_STARTED = 0;
  COMPLETED = 1;
}