syntax = "proto3";

import "auth_status.proto";
import "onboarding_status.proto";

option java_package = "bob.colbaskin.webantpractice.datastore";
option java_multiple_files = true;

message UserPreferencesProto {
  OnboardingStatus onboardingStatus = 1;
  AuthStatus authStatus = 2;
}